websocket and adapting to new React frontend